# peak-over-threshold

./: pyproject.toml
src/peak_over_threshold/: dspot.py  pot.py  spot.py
